--- a/config.env
+++ b/config.env
@@ -1,22 +1,20 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "5544723868:AAEiyGZozlVefewEKzJw8LcxbHxVM6tJNdw"                              # Require restart after changing it while bot running
+OWNER_ID = "5027085442"                               # Require restart after changing it while bot running
+TELEGRAM_API = "1383845"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "0e3d2c299cc3c5cc26c283cecd2eb97c"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
-IS_TEAM_DRIVE = ""
+GDRIVE_ID = "1xP7-Kaexc-bOpKaRGRo2GmnE-8LlQoWe"
+IS_TEAM_DRIVE = "True"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 DOWNLOAD_STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://kmac:kmac@cluster0.ftpobz9.mongodb.net/?retryWrites=true&w=majority"                      # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
-SUDO_USERS = ""                             # Require restart after changing it while bot running
+SUDO_USERS = "5027085442"                             # Require restart after changing it while bot running
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+INDEX_URL = "https://lkhitechmirror3.lkhitech8.workers.dev/0:/Mirror%20Bot"
 STATUS_LIMIT = ""
 STOP_DUPLICATE = ""
 CMD_SUFFIX = ""                              # Require restart after changing it while bot running
@@ -33,7 +31,7 @@ USER_SESSION_STRING = ""                    # Require restart after changing it 
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
-MEDIA_GROUP = ""
+MEDIA_GROUP = "-1001876738264"
 LEECH_FILENAME_PERFIX = ""
 DUMP_CHAT = ""
 # qBittorrent/Aria2c
@@ -50,9 +48,9 @@ RSS_COMMAND = ""
 RSS_CHAT_ID = ""
 RSS_USER_SESSION_STRING = ""                # Require restart after changing it while bot running
 # Mega
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "0OJ22JJI"
+MEGA_EMAIL_ID = "lkhitech8@gmail.com"
+MEGA_PASSWORD = "cmd@0951357"
 # Buttons
 VIEW_LINK = ""
 # Torrent Search
