--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "5544723868:AAEiyGZozlVefewEKzJw8LcxbHxVM6tJNdw"                              # Require restart after changing it while bot running
+BOT_TOKEN = "5135908798:AAHJCnz7J8Jf2XtT-HLtdwTqLouBgfp2YkA"                              # Require restart after changing it while bot running
 OWNER_ID = "5027085442"                               # Require restart after changing it while bot running
 TELEGRAM_API = "1383845"                           # Require restart after changing it while bot running
 TELEGRAM_HASH = "0e3d2c299cc3c5cc26c283cecd2eb97c"                          # Require restart after changing it while bot running
@@ -9,7 +9,7 @@ IS_TEAM_DRIVE = "True"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 DOWNLOAD_STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
-DATABASE_URL = "mongodb+srv://kmac:kmac@cluster0.ftpobz9.mongodb.net/?retryWrites=true&w=majority"                      # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://kmac:kmac@cluster0.jowv0mm.mongodb.net/?retryWrites=true&w=majority"                      # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
 SUDO_USERS = "5027085442"                             # Require restart after changing it while bot running
 IGNORE_PENDING_REQUESTS = ""
@@ -33,7 +33,7 @@ AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
 MEDIA_GROUP = "-1001876738264"
 LEECH_FILENAME_PERFIX = ""
-DUMP_CHAT = ""
+DUMP_CHAT = "-1001876738264"
 # qBittorrent/Aria2c
 BASE_URL = ""
 SERVER_PORT = ""
